--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "bundle/gocode"]
 	path = bundle/gocode
 	url = https://github.com/golangtw/gocode.vim.git
+[submodule "bundle/go.vim"]
+	path = bundle/go.vim
+	url = https://github.com/golangtw/go.vim.git
