--- a/.gitmodules
+++ b/.gitmodules
@@ -43,12 +43,12 @@
 [submodule "bundle/fugitive"]
 	path = bundle/fugitive
 	url = https://github.com/tpope/vim-fugitive.git
-[submodule "bundle/gitv"]
-	path = bundle/gitv
-	url = https://github.com/gregsexton/gitv.git
 [submodule "bundle/gocode"]
 	path = bundle/gocode
 	url = https://github.com/golangtw/gocode.vim.git
 [submodule "bundle/go.vim"]
 	path = bundle/go.vim
 	url = https://github.com/golangtw/go.vim.git
+[submodule "bundle/SingleCompile"]
+	path = bundle/SingleCompile
+	url = https://github.com/xuhdev/SingleCompile.git
