--- a/.gitmodules
+++ b/.gitmodules
@@ -57,11 +57,11 @@
 [submodule "bundle/gocode"]
 	path = bundle/gocode
 	url = https://github.com/golangtw/gocode.vim.git
-	url = https://github.com/tpope/vim-fugitive.git
+	ignore = untracked
 [submodule "bundle/go.vim"]
 	path = bundle/go.vim
 	url = https://github.com/golangtw/go.vim.git
-	url = https://github.com/tpope/vim-fugitive.git
+	ignore = untracked
 [submodule "bundle/SingleCompile"]
 	path = bundle/SingleCompile
 	url = https://github.com/xuhdev/SingleCompile.git
