--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,15 @@
 	path = bundle/align
 	url = https://github.com/vim-scripts/Align.git
 	ignore = untracked
+[submodule "bundle/ag"]
+	path = bundle/ag
+	url = https://github.com/epmatsw/ag.vim.git
+	ignore = untracked
+[submodule "bundle/tslime"]
+	path = bundle/tslime
+	url = https://github.com/jgdavey/tslime.vim.git
+	ignore = untracked
+[submodule "bundle/vim-turbux"]
+	path = bundle/vim-turbux
+	url = https://github.com/jgdavey/vim-turbux.git
+	ignore = untracked
