--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,11 @@
 	path = bundle/vim-turbux
 	url = https://github.com/jgdavey/vim-turbux.git
 	ignore = untracked
+[submodule "bundle/startify"]
+	path = bundle/startify
+	url = https://github.com/mhinz/vim-startify.git
+	ignore = untracked
+[submodule "bundle/vim-fugitive"]
+	path = bundle/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
+	ignore = untracked
