--- a/.gitmodules
+++ b/.gitmodules
@@ -122,3 +122,7 @@
 	path = bundle/thumbnail.vim
 	url = https://github.com/itchyny/thumbnail.vim.git
 	ignore = untracked
+[submodule "bundle/vim-ruby-refactoring"]
+	path = bundle/vim-ruby-refactoring
+	url = https://github.com/ecomba/vim-ruby-refactoring.git
+	ignore = untracked
