--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,6 @@
 	path = bundle/rspec-vim
 	url = git@github.com:hSATAC/rspec.vim.git
 	ignore = untracked
+[submodule "bundle/vim-indent-guides"]
+	path = bundle/vim-indent-guides
+	url = https://github.com/nathanaelkane/vim-indent-guides.git
