--- a/.gitmodules
+++ b/.gitmodules
@@ -138,3 +138,7 @@
 	path = bundle/vim-airline
 	url = https://github.com/bling/vim-airline.git
 	ignore = untracked
+[submodule "bundle/vim-easymotion"]
+	path = bundle/vim-easymotion
+	url = https://github.com/Lokaltog/vim-easymotion.git
+	ignore = untracked
