--- a/.gitmodules
+++ b/.gitmodules
@@ -146,3 +146,7 @@
 	path = bundle/vim-nerdtree-tabs
 	url = https://github.com/jistr/vim-nerdtree-tabs.git
 	ignore = untracked
+[submodule "bundle/undotree"]
+	path = bundle/undotree
+	url = https://github.com/mbbill/undotree.git
+	ignore = untracked
