--- a/.gitmodules
+++ b/.gitmodules
@@ -150,3 +150,6 @@
 	path = bundle/undotree
 	url = https://github.com/mbbill/undotree.git
 	ignore = untracked
+[submodule "bundle/vim-gocode-blackrush"]
+	path = bundle/vim-gocode-blackrush
+	url = git@github.com:Blackrush/vim-gocode.git
